new(#31, #34): create promotion delete promotion
